--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences:
   flare_flutter:
   flutter_local_notifications:
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
