--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   flare_flutter:
   flutter_local_notifications:
   permission_handler: ^11.3.1
+  http: ^1.2.2
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  flutter_easyloading: ^3.0.5
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
